--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     def koin_version = "2.0.1"
     def lifecycle_version = "2.2.0"
     def room_version = "2.2.6"
-
+    def retrofit_version = "2.6.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -58,11 +58,10 @@ dependencies {
     // ViewPager2
     implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
 
-    // Retrofit, OkHttp - Rest API
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    // Retrofit
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     // Room - Local DB
     implementation "androidx.room:room-runtime:$room_version"
