--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FindMyPackage">
+        android:theme="@style/Theme.FindMyPackage"
+        >
 
-        <activity android:name=".ui.main.MainActivity">
+        <activity android:name=".ui.main.MainActivity"
+            android:launchMode="singleTask" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +24,13 @@
 
         </activity>
 
-        <activity android:name=".ui.trackAdd.TrackAddActivity">
+        <activity android:name=".ui.trackAdd.TrackAddActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:launchMode="singleTop" >
 
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
 
         </activity>
