--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:windowSoftInputMode="adjustResize"
             android:launchMode="singleTop" />
 
+        <activity android:name="com.example.findmypackage.ui.track.detail.TrackDetailActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:launchMode="singleTop" />
 
     </application>
 
