--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    kapt {
+        generateStubs = true
+    }
 }
 
 dependencies {
@@ -70,7 +73,8 @@ dependencies {
 
     // Room - Local DB
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
