--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
 
         <activity
             android:name="com.example.findmypackage.ui.track.detail.TrackDetailActivity"
+            android:parentActivityName=".ui.main.MainActivity"
             android:windowSoftInputMode="adjustResize"
             android:launchMode="singleTop" />
 
