--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     // swipe layout - UI
     implementation  'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 
+    // Material ripple Layout
+    implementation 'com.balysv:material-ripple:1.0.2'
+
     // rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
