--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     // Material ripple Layout
     implementation 'com.balysv:material-ripple:1.0.2'
 
+    // flexbox
+    implementation 'com.google.android:flexbox:2.0.1'
+
     // rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
