--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.findmypackage"
+        applicationId "danggai.app.parcelwhere"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
