--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:launchMode="singleTop" />
 
         <service
-            android:name="danggai.app.parcelwhere.util.MyNotificationListenerService"
+            android:name="danggai.app.parcelwhere.service.MyNotificationListenerService"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
             android:launchMode="singleTask" >
             <intent-filter>
