--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="danggai.app.parcelwhere">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,6 +15,11 @@
         android:theme="@style/Theme.ParcelWhere"
         android:screenOrientation="portrait"
         >
+
+        <provider
+            android:name="androidx.work.impl.WorkManagerInitializer"
+            android:authorities="danggai.app.parcelwhere.App.workmanager-init"
+            tools:node="remove"/>
 
         <activity
             android:name="danggai.app.parcelwhere.ui.main.MainActivity"
