--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "danggai.app.parcelwhere"
@@ -36,6 +36,7 @@ android {
     }
     buildFeatures {
         dataBinding = true
+        viewBinding = true
     }
     kapt {
         generateStubs = true
