- Implemented: Apply sample highlight code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,9 +100,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     // Spotlight for tutorial
-    implementation 'com.github.takusemba:spotlight:x.x.x'
+    implementation 'com.github.takusemba:spotlight:2.0.5'
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
