--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,16 @@ android {
 
 dependencies {
     def koin_version = "2.2.2"
-    def lifecycle_version = "2.2.0"
+    def lifecycle_version = "2.3.1"
     def room_version = "2.3.0"
     def retrofit_version = "2.6.0"
-    def workmanager_version = "2.5.0"
+    def worker_version = "2.5.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
@@ -92,7 +92,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // worker - Background Action
-    implementation "androidx.work:work-runtime-ktx:$workmanager_version"
+    implementation "androidx.work:work-runtime-ktx:$worker_version"
 
     // firebase
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
